2006-09-21  Johan Bilien <johan.bilien@nokia.com>

	* cp-grid.c: Fixed a crash freshly introduced

2006-09-20  Johan Bilien <johan.bilien@nokia.com>

	* hildon-control-panel-main.c: Removed unnecessary assignment
	* hildon-control-panel.scheme: default size is small. Fixes: NB#31084

2006-09-20  Johan Bilien <johan.bilien@nokia.com>

	* cp-grid.c: Fixed various leaks of GList. Fixes: NB#40616

2006-09-20  Johan Bilien <johan.bilien@nokia.com>

	* cp-grid.c:
	  - try to fix utterly broken size request
	  - do not hide/show widgets which are "out of view" (we don't
	    use a scrollbar any longer). Fixes: NB#40768
	* hildon-control-panel-main.c: Removed unnecessary hard-coded size request

2006-09-04 Moises Martinez <moises.martinzes@nokia.com>

	* hildon-control-panel-main.c: Fixed building problem on
 	not declaring ourselves as background killable if we are 
	running an applet and it does not support state-saving

2006-09-04 Karoliina Salminen <karoliina.t.salminen@nokia.com>

	* All files: modification to license headers
    	Fixes: NB#39397.
	* configure.ac -> 2.2.6

2006-08-24 Johan Bilien <johan.bilien@nokia.com>

	* hildon-control-panel-main.c: do not declare ourselves as background
	  killable if we are running an applet and it does not support
	  state-saving

2006-08-23 Johan Bilien <johan.bilien@nokia.com>

	* hildon-cp-rfs.c: replace gtk_info_print with hildon_banner_info
	  (Closes NB#37551)

2006-08-18 Johan Bilien <johan.bilien@nokia.com>

	* hildon-cp-applist.c: Really free the lists return by gconf
	   (Closes NB#36887)
	* configure.ac: 2.2.5

2006-08-18 Johan Bilien <johan.bilien@nokia.com>

	* hildon-cp-rfs.c:
	  - Make the dialogs transient to the main window (Closes NB#36937)
	  - slight code cleaning
	* configure.ac: 2.2.4

2006-08-07 Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.2.3

2006-08-07 Johan Bilien <johan.bilien@nokia.com>

	* hildon-cp-item.[ch]: Added sort function