@@ -1,5 +1,10 @@
 2006-09-21  Johan Bilien <johan.bilien@nokia.com>
 
+	* hildon-cp-view.c: Adjust the scrollbar if necessary when focussing
+	  on an item. Fixes: NB# 34439
+
+2006-09-21  Johan Bilien <johan.bilien@nokia.com>
+
 	* cp-grid.c: Fixed a crash freshly introduced
 
 2006-09-20  Johan Bilien <johan.bilien@nokia.com>
